--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,24 @@
 /* You can add global styles to this file, and also import other style files */
+body {
+  height: 100%;
+}
+
+body::before {
+  background-image: url('assets/cleaning.jpg');
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-position: center;
+  background-size: cover;
+  display: block;
+  content:"";
+  position: absolute;
+  z-index: -1;
+  top: 0; left: 0; right: 0; height: 100%;
+  opacity: .5;
+}
+
+@media (min-width: 600px) {
+  body::before{
+    opacity: 1;
+  }
+}
