--- a/src/app/main/main.component.css
+++ b/src/app/main/main.component.css
@@ -1,10 +1,10 @@
 .container {
   display: grid;
   align-items: center;
-  grid-template-rows: 1fr 2fr 1fr;
+  grid-template-rows: 1fr 4fr 1fr;
   background-color: white;
   opacity: .9;
-  transition: left 0.5s;
+  transition: transform .5s;
   /* Center */
   position: absolute;
   top: 50%;
@@ -13,7 +13,7 @@
   /* Mobile first sizing */
   width: 95%;
   max-width: 500px;
-  height: 50%;
+  height: 60%;
 }
 
 /* Desktop sizing */
@@ -24,20 +24,69 @@
   }
 }
 
-.item:nth-child(1), .item:nth-child(2) {
+.form-container-item:nth-child(1), 
+.form-container-item:nth-child(2) {
   display: grid;
   justify-content: center;
 }
 
-.item:nth-child(3) {
+.form-container-item:nth-child(3) {
   display: flex;
   justify-content: space-between;
 }
 
 .container.faded {
-  left: -50%;
+  transform: translate(-2000px, -50%);
 }
 
 .container.hidden{
-  left: 150%;
+  transform: translate(2000px, -50%);
+}
+
+/* .form-progress {
+  display: inline-block;
+  width: 350px;
+} */
+
+.circle, .bar {
+  display: inline-block;
+}
+
+.circle {
+  vertical-align: -4px;
+  height: 30px;
+  width: 30px;
+  border-radius: 30px;
+  background-color: gray;
+  border: 2px double white;
+  text-align: center;
+}
+
+.circle.active {
+  background-color: teal;
+}
+
+.circle.done {
+  background-color: green;
+  border: 2px double green;
+}
+
+.bar {
+  width: 50px;
+  height: 3px;
+  background-color: gray;
+}
+
+.bar.done {
+  background-color: green;
+}
+
+span.label {
+  color: white;
+  font: 12px arial;
+}
+
+input[type=number].zip::-webkit-outer-spin-button,
+input[type=number].zip::-webkit-inner-spin-button {
+    -webkit-appearance: none;
 }
