added calendar to next page. borrowed from jamie

--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -2,7 +2,7 @@
   <div id="1" class="container">
     <div class="form-container-item">
       <div class="form-progress">
-        <div [ngClass]="{'circle':true, 'active':activeFormPage==1}">
+        <div [ngClass]="{'circle':true, 'active':activeFormPage == 1}">
           <span class="label">1</span>
         </div>
         <span class="bar"></span>
@@ -36,11 +36,11 @@
   <div id="2" class="container hidden">
     <div class="form-container-item">
       <div class="form-progress">
-        <div [ngClass]="{'circle':true, 'done':activeFormPage>1}">
+        <div [ngClass]="{'circle':true, 'done':activeFormPage > 1}">
           <span class="label">✓</span>
         </div>
-        <span [ngClass]="{'bar':true, 'done':activeFormPage>1}"></span>
-        <div [ngClass]="{'circle':true, 'active':activeFormPage==2}">
+        <span [ngClass]="{'bar':true, 'done':activeFormPage > 1}"></span>
+        <div [ngClass]="{'circle':true, 'active':activeFormPage == 2}">
           <span class="label">2</span>
         </div>
         <span class="bar"></span>
@@ -108,6 +108,105 @@
             </ul>
           </div>
         </a>
+      </div>
+    </div>
+    <div class="form-container-item">
+      <button class="btn btn-secondary" (click)="onBack()">Back</button>
+      <button class="btn btn-primary" (click)="onNext()">Next</button>
+    </div>
+  </div>
+  <div id="3" class="container hidden">
+    <div class="form-container-item">
+      <div class="form-progress">
+        <div [ngClass]="{'circle':true, 'done':activeFormPage > 1}">
+          <span class="label">✓</span>
+        </div>
+        <span [ngClass]="{'bar':true, 'done':activeFormPage > 1}"></span>
+        <div [ngClass]="{'circle':true, 'done':activeFormPage > 2}">
+          <span class="label">✓</span>
+        </div>
+        <span [ngClass]="{'bar':true, 'done':activeFormPage > 2}"></span>
+        <div [ngClass]="{'circle':true, 'active':activeFormPage == 3}">
+          <span class="label">3</span>
+        </div>
+        <span class="bar"></span>
+        <div class="circle">
+          <span class="label">4</span>
+        </div>
+        <span class="bar"></span>
+        <div class="circle">
+          <span class="label">5</span>
+        </div>
+      </div>
+    </div>
+    <div class="form-container-item">
+      <div class="jzdbox1 jzdbasf jzdcal">
+      
+        <div class="jzdcalt">June 2017</div>
+      
+        <span>Su</span>
+        <span>Mo</span>
+        <span>Tu</span>
+        <span>We</span>
+        <span>Th</span>
+        <span>Fr</span>
+        <span>Sa</span>
+      
+      
+        <span class="jzdb">
+          <!--BLANK--></span>
+        <span class="jzdb">
+          <!--BLANK--></span>
+        <span class="jzdb">
+          <!--BLANK--></span>
+        <span class="jzdb">
+          <!--BLANK--></span>
+        <span class="jzdb">
+          <!--BLANK--></span>
+        <span class="jzdb">
+          <!--BLANK--></span>
+        <span>1</span>
+        <span class="circle" data-title="My 25th birthday!">2</span>
+        <span>3</span>
+        <span>4</span>
+        <span>5</span>
+        <span>6</span>
+        <span>7</span>
+        <span>8</span>
+        <span>9</span>
+        <span>10</span>
+        <span>11</span>
+        <span class="circle" data-title="2 month anniversary!">12</span>
+        <span>13</span>
+        <span>14</span>
+        <span>15</span>
+        <span>16</span>
+        <span>17</span>
+        <span>18</span>
+        <span>19</span>
+        <span>20</span>
+        <span>21</span>
+        <span class="circle" data-title="#MusicMonday - share your favorite song!">22</span>
+        <span>23</span>
+        <span>24</span>
+        <span>25</span>
+        <span>26</span>
+        <span>27</span>
+        <span>28</span>
+        <span>29</span>
+        <span>30</span>
+        <span class="jzdb">
+          <!--BLANK--></span>
+        <span class="jzdb">
+          <!--BLANK--></span>
+        <span class="jzdb">
+          <!--BLANK--></span>
+        <span class="jzdb">
+          <!--BLANK--></span>
+        <span class="jzdb">
+          <!--BLANK--></span>
+        <span class="jzdb">
+          <!--BLANK--></span>
       </div>
     </div>
     <div class="form-container-item">
