--- a/src/app/main/main.component.scss
+++ b/src/app/main/main.component.scss
@@ -1,3 +1,5 @@
+@import url(https://fonts.googleapis.com/css?family=Fjalla+One:400|Roboto:400,400italic,700);
+
 .container {
   display: grid;
   align-items: center;
@@ -44,6 +46,8 @@
   transform: translate(2000px, -50%);
 }
 
+/* Progress Bar */
+
 .circle, .bar {
   display: inline-block;
 }
@@ -86,6 +90,8 @@ input[type=number].zip::-webkit-outer-spin-button,
 input[type=number].zip::-webkit-inner-spin-button {
     -webkit-appearance: none;
 }
+
+/* Services */
 
 .services {
   display: grid;
@@ -137,4 +143,78 @@ input[type=number].zip::-webkit-inner-spin-button {
 
 .service-item > h1 {
   font-size: 25px;
+}
+
+/* Calendar, borrowed from Jamie -> https://codepen.io/jamiemggs/pen/xdvaJv */
+
+.jzdbox1 {
+  width: 315px; 
+  background: #332f2e; 
+  border-radius: 5px; 
+  overflow: hidden; 
+  display: block; 
+  margin-bottom: 10px; 
+  box-shadow: 0 0 10px #201d1c; 
+  margin: 0 auto;
+}
+
+.jzdcal {
+  padding: 0 10px 10px 10px; 
+  box-sizing: border-box!important; 
+  background:#749d9e; 
+  background: -webkit-linear-gradient(#749d9e, #b3a68b)!important; 
+  background: -o-linear-gradient(#749d9e, #b3a68b)!important; 
+  background: -moz-linear-gradient(#749d9e, #b3a68b)!important; 
+  background: linear-gradient(#749d9e, #b3a68b)!important;
+}
+
+.jzdcalt {
+  font: 18px 'Roboto'; 
+  font-weight: 700; 
+  color: #f7f3eb; 
+  display: block; 
+  margin: 18px 0 0 0; 
+  text-transform: uppercase; 
+  text-align: center; 
+  letter-spacing: 1px;
+}
+
+.jzdcal span {
+  font:11px 'Roboto'; 
+  font-weight: 400; 
+  color: #f7f3eb; 
+  text-align: center; 
+  width: 42px; 
+  height: 42px; 
+  display: inline-block; 
+  float: left; 
+  overflow: hidden; 
+  line-height: 40px;
+}
+
+.jzdcal .jzdb:before {
+  opacity: 0.3; 
+  content: 'o';
+}
+
+.circle {
+  border: 1px solid #f7f3eb; 
+  box-sizing: border-box!important; 
+  border-radius: 200px!important;
+}
+
+span[data-title]:hover:after, 
+div[data-title]:hover:after {
+  font: 11px 'Roboto'; 
+  font-weight: 400; 
+  content: attr(data-title); 
+  position: absolute; 
+  margin: 0 0 100px; 
+  background: #282423; 
+  border: 1px solid #f7f3eb; 
+  color: #f7f3eb; 
+  padding: 5px; 
+  z-index: 9999; 
+  min-width: 150px; 
+  max-width: 150px;
 }
