--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -153,20 +153,14 @@
         <span>Sa</span>
       
       
-        <span class="jzdb">
-          <!--BLANK--></span>
-        <span class="jzdb">
-          <!--BLANK--></span>
-        <span class="jzdb">
-          <!--BLANK--></span>
-        <span class="jzdb">
-          <!--BLANK--></span>
-        <span class="jzdb">
-          <!--BLANK--></span>
-        <span class="jzdb">
-          <!--BLANK--></span>
+        <span class="jzdb"></span>
+        <span class="jzdb"></span>
+        <span class="jzdb"></span>
+        <span class="jzdb"></span>
+        <span class="jzdb"></span>
+        <span class="jzdb"></span>
         <span>1</span>
-        <span class="circle" data-title="My 25th birthday!">2</span>
+        <span>2</span>
         <span>3</span>
         <span>4</span>
         <span>5</span>
@@ -176,7 +170,7 @@
         <span>9</span>
         <span>10</span>
         <span>11</span>
-        <span class="circle" data-title="2 month anniversary!">12</span>
+        <span>12</span>
         <span>13</span>
         <span>14</span>
         <span>15</span>
@@ -186,7 +180,7 @@
         <span>19</span>
         <span>20</span>
         <span>21</span>
-        <span class="circle" data-title="#MusicMonday - share your favorite song!">22</span>
+        <span>22</span>
         <span>23</span>
         <span>24</span>
         <span>25</span>
@@ -195,18 +189,12 @@
         <span>28</span>
         <span>29</span>
         <span>30</span>
-        <span class="jzdb">
-          <!--BLANK--></span>
-        <span class="jzdb">
-          <!--BLANK--></span>
-        <span class="jzdb">
-          <!--BLANK--></span>
-        <span class="jzdb">
-          <!--BLANK--></span>
-        <span class="jzdb">
-          <!--BLANK--></span>
-        <span class="jzdb">
-          <!--BLANK--></span>
+        <span class="jzdb"></span>
+        <span class="jzdb"></span>
+        <span class="jzdb"></span>
+        <span class="jzdb"></span>
+        <span class="jzdb"></span>
+        <span class="jzdb"></span>
       </div>
     </div>
     <div class="form-container-item">
