decided to use a service to separate time logic. discovered that setDate(0) returns date of last month which greatly reduced code complexity. implemented dynamic dates onto calendar. need to figure out logic for placing these dates onto the correct days of the week, and filling the rest with either the default circles or prev/next month dates which will require alot more code

--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -164,7 +164,7 @@
           <span class="jzdb"></span>
           <span class="jzdb"></span>
           <span class="jzdb"></span>
-          <span>1</span>
+          <!-- <span>1</span>
           <span>2</span>
           <span>3</span>
           <span>4</span>
@@ -194,7 +194,8 @@
           <span>28</span>
           <span>29</span>
           <span>30</span>
-          <span class="jzdb"></span>
+          <span class="jzdb"></span> -->
+          <span *ngFor="let date of datesList">{{date}}</span>
           <span class="jzdb"></span>
           <span class="jzdb"></span>
           <span class="jzdb"></span>
