added next month functionality. changes to dummydates somehow also affects referenced date, so had to make entirely new date with same date properties. also figured to set date to 1 when incrementing, as dates like jan 29 to feb 29 is invalid so feb 29 changes to march 1 instead.

--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -148,7 +148,6 @@
           <i class="fa fa-arrow-right cal-header-item" style="cursor: pointer;" (click)="nextMonth()"></i>
         </div>
 
-      
         <span>Su</span>
         <span>Mo</span>
         <span>Tu</span>
@@ -156,52 +155,9 @@
         <span>Th</span>
         <span>Fr</span>
         <span>Sa</span>
-      
-        <div class="days">
-          <span class="jzdb"></span>
-          <span class="jzdb"></span>
-          <span class="jzdb"></span>
-          <span class="jzdb"></span>
-          <span class="jzdb"></span>
-          <span class="jzdb"></span>
-          <!-- <span>1</span>
-          <span>2</span>
-          <span>3</span>
-          <span>4</span>
-          <span>5</span>
-          <span>6</span>
-          <span>7</span>
-          <span>8</span>
-          <span>9</span>
-          <span>10</span>
-          <span>11</span>
-          <span>12</span>
-          <span>13</span>
-          <span>14</span>
-          <span>15</span>
-          <span>16</span>
-          <span>17</span>
-          <span>18</span>
-          <span>19</span>
-          <span>20</span>
-          <span>21</span>
-          <span>22</span>
-          <span>23</span>
-          <span>24</span>
-          <span>25</span>
-          <span>26</span>
-          <span>27</span>
-          <span>28</span>
-          <span>29</span>
-          <span>30</span>
-          <span class="jzdb"></span> -->
-          <span *ngFor="let date of datesList">{{date}}</span>
-          <span class="jzdb"></span>
-          <span class="jzdb"></span>
-          <span class="jzdb"></span>
-          <span class="jzdb"></span>
-          <span class="jzdb"></span>
-        </div>
+    
+        <span *ngFor="let blankDay of initialDayOfWeek"></span>
+        <span class="days" *ngFor="let date of datesList">{{date}}</span>
       </div>
     </div>
     <div class="form-container-item">
