initialized socketio client service to connect to server socket, used for zip code location data retrieval

--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -42,6 +42,7 @@
           <label for="zip">Zip code</label>
           <input ngModel #zip="ngModel" name="zip" class="form-control noNumArrow" pattern="^\d{5}$" maxlength="5">
         </div>
+        <span class="location">Seattle, WA</span>
       </div>
     </div>
     <div class="form-container-item">
