--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -40,7 +40,8 @@
         </div>
         <div class="zipcode">
           <label for="zip">Zip code</label>
-          <input ngModel #zip="ngModel" name="zip" class="form-control noNumArrow" pattern="^\d{5}$" maxlength="5">
+          <input ngModel #zip="ngModel" name="zip" class="form-control noNumArrow" pattern="^\d{5}$" maxlength="5"
+           (keyup)="requestLocationDetails()">
         </div>
         <span class="location">Seattle, WA</span>
       </div>
