--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -41,7 +41,7 @@
         <div class="zipcode">
           <label for="zip">Zip code</label>
           <input ngModel #zip="ngModel" name="zip" class="form-control noNumArrow" pattern="^\d{5}$" maxlength="5"
-           (keyup)="requestLocationDetails()">
+           (keyup)="requestLocationDetails(f.value.zip)">
         </div>
         <span class="location">Seattle, WA</span>
       </div>
