--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -43,6 +43,8 @@
           <input ngModel #zip="ngModel" name="zip" class="form-control noNumArrow" pattern="^\d{5}$" maxlength="5"
            (keyup)="requestLocationDetails(f.value.zip)">
         </div>
+        <div class="g-signin2" id="googleBtn"></div>
+        <button class="btn btn-primary" (click)="signOut()">sign out</button>
         <span *ngIf="city && state" class="location">{{city}}, {{state}}</span>
       </div>
     </div>
