--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -43,9 +43,6 @@
           <input ngModel #zip="ngModel" name="zip" class="form-control noNumArrow" pattern="^\d{5}$" maxlength="5"
            (keyup)="requestLocationDetails(f.value.zip)">
         </div>
-        <div class="g-signin2" id="googleBtn"></div>
-        <button class="btn btn-primary" (click)="googleSignOut()">sign out</button>
-        <button class="btn btn-primary" (click)="saveToGoogleCalendar()">Insert</button>
         <span *ngIf="city && state" class="location">{{city}}, {{state}}</span>
       </div>
     </div>
@@ -186,6 +183,10 @@
           <span class="days" *ngFor="let date of datesList" (click)=selectDay($event)>{{date}}</span>
         </div>
       </div>
+      <div class="calendar-check"><input type="checkbox" (change)="toggleGoogleLogin($event)"> Save to Google Calendars</div>
+              <!-- <div class="g-signin2" id="googleBtn"></div> -->
+              <!-- <button class="btn btn-primary" (click)="googleSignOut()">sign out</button> -->
+              <!-- <button class="btn btn-primary" (click)="saveToGoogleCalendar()">Insert</button> -->
     </div>
     <div class="form-container-item">
       <button class="btn btn-secondary" (click)="prevPage()">Back</button>
