added id to actual calendar checkbox for use in testing. renamed the googleBtn shadow placeholder to checkBoxShadowSource

--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -184,8 +184,8 @@
         </div>
       </div>
       <div class="calendar-check">
-        <input type="checkbox" (change)="toggleGoogleLogin($event)"> Save to Google Calendars
-        <span id="calendarCheckbox"></span>
+        <input id="calendarCheckbox" type="checkbox" (change)="toggleGoogleLogin($event)"> Save to Google Calendars
+        <span id="checkBoxShadowSource"></span>
       </div>
     </div>
     <div class="form-container-item">
